remove except-specs

--- a/nub.vcxproj.filters
+++ b/nub.vcxproj.filters
@@ -68,4 +68,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="CMakeLists.txt" />
+  </ItemGroup>
 </Project>
