lzo for cmake #2

--- a/test_res/CMakeLists.txt
+++ b/test_res/CMakeLists.txt
@@ -1,2 +1,4 @@
-add_executable (test_res test_res.cpp)
-target_link_libraries(test_res nub)
+IF(LZO_FOUND)
+	add_executable (test_res test_res.cpp)
+	target_link_libraries(test_res nub ${LZO_LIBRARIES})
+ENDIF(LZO_FOUND)
