more dugging statements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project (nub)
 include (FindLZO.cmake)
 
 IF(CMAKE_COMPILER_IS_GNUCXX)
-   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -D_FILE_OFFSET_BITS=64")
+   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -D_FILE_OFFSET_BITS=64 -g")
    add_library (nub STATIC src/FileSystem.cpp src/ResourceGet.cpp  
                            src/Index.cpp src/ResourcePut.cpp src/imemstream.cpp
                            src/ResourceFile.cpp src/UniIndex.cpp)
